--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
                 <option value="game_desc">G数 ↓</option>
                 <option value="rate_desc">機械割 ↓</option>
                 <option value="rate_asc">機械割 ↑</option>
+                <option value="machine_asc">機種名 あ→わ</option>
+                <option value="machine_desc">機種名 わ→あ</option>
+                <option value="unit_asc">台番号 ↑</option>
+                <option value="unit_desc">台番号 ↓</option>
             </select>
         </div>
 
@@ -159,7 +163,12 @@
                     <option value="total_asc">合計差枚 少ない順</option>
                     <option value="avg_desc">平均差枚 多い順</option>
                     <option value="latest_desc">最新日 差枚多い順</option>
+                    <option value="machine_asc">機種名 あ→わ</option>
+                    <option value="machine_desc">機種名 わ→あ</option>
+                    <option value="unit_asc">台番号 ↑</option>
+                    <option value="unit_desc">台番号 ↓</option>
                 </select>
+
             </div>
             <button id="loadTrend" class="btn-apply">表示更新</button>
         </div>
@@ -263,6 +272,10 @@
                         <option value="count_desc">台数 多い順</option>
                         <option value="winrate_desc">勝率 高い順</option>
                         <option value="winrate_asc">勝率 低い順</option>
+                        <option value="machine_asc">機種名 あ→わ</option>
+                        <option value="machine_desc">機種名 わ→あ</option>
+                        <option value="unit_asc">台番号 ↑</option>
+                        <option value="unit_desc">台番号 ↓</option>
                     </select>
                 </div>
             </div>
@@ -350,6 +363,10 @@
                         <option value="count_desc">延べ台数 多い順</option>
                         <option value="winrate_desc">勝率 高い順</option>
                         <option value="winrate_asc">勝率 低い順</option>
+                        <option value="machine_asc">機種名 あ→わ</option>
+                        <option value="machine_desc">機種名 わ→あ</option>
+                        <option value="unit_asc">台番号 ↑</option>
+                        <option value="unit_desc">台番号 ↓</option>
                     </select>
                 </div>
             </div>
