update:データ読み込みの実装を最新月を優先して表示したのちに、他の日付のデータを裏で読み込む実装にした。

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- ローディング画面 -->
+    <div id="loading-screen" class="loading-screen">
+        <div class="loading-content">
+            <div class="loading-spinner"></div>
+            <div class="loading-text">データを読み込み中...</div>
+            <div class="loading-progress">
+                <div class="loading-progress-bar" id="loadingProgressBar"></div>
+            </div>
+            <div class="loading-status" id="loadingStatus">初期化中...</div>
+        </div>
+    </div>
+    
     <h1>📊 ホールデータまとめ</h1>
 
     <!-- タブ -->
