update:勝率グラフの作成

--- a/index.html
+++ b/index.html
@@ -166,11 +166,12 @@
                     <option value="machine">機種別</option>
                 </select>
             </div>
-            <div class="control-group" id="machineValueTypeGroup" style="display: none;">
+            <div class="control-group" id="valueTypeGroup">
                 <label>値:</label>
                 <select id="trendMachineValueType">
                     <option value="total">総差枚</option>
                     <option value="avg">平均差枚</option>
+                    <option value="winrate">勝率</option>
                 </select>
             </div>
             <div class="control-group">
